--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,6 +7,7 @@ $cashmere: #E8B6A5;
 $green: #036307;
 $greyhero: #D3D3D3;
 $black: #000;
+$fontblack: #333;
 $white: #fff;
 $lightgrey: #e6e6e6;
 
